# gwanjong-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  GUIDE.md  README.ko.md  README.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: lint.yml  test.yml
docs/: ARCHITECTURE.md
gwanjong_mcp/: __init__.py  __main__.py  approval.py  approval_cli.py  asset.py  autonomous.py  browser.py  campaign.py  conversion.py  daemon.py  dashboard.py  events.py  llm.py  measure.py  memory.py  message.py  monitor.py  persona.py  pipeline.py  policy.py  safety.py  scheduler.py  scraper.py  server.py  setup.py  storage.py  strategy.py  tracker.py  types.py
gwanjong_mcp/static/: index.html
tests/: test_asset.py  test_autonomous.py  test_campaign.py  test_conversion.py  test_dashboard.py  test_measure.py  test_message.py  test_pipeline.py  test_scheduler.py  test_scraper.py  test_server.py  test_setup.py  test_strategy.py
